logs/cltk.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GitPython-2.1.8.dist-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Whoosh-2.7.4.dist-info'...
Listing './lib/python3.5/site-packages/cltk'...
Listing './lib/python3.5/site-packages/cltk/corpus'...
Listing './lib/python3.5/site-packages/cltk/corpus/arabic'...
Listing './lib/python3.5/site-packages/cltk/corpus/arabic/utils'...
Listing './lib/python3.5/site-packages/cltk/corpus/arabic/utils/pyarabic'...
Listing './lib/python3.5/site-packages/cltk/corpus/bengali'...
Listing './lib/python3.5/site-packages/cltk/corpus/chinese'...
Listing './lib/python3.5/site-packages/cltk/corpus/classical_hindi'...
Listing './lib/python3.5/site-packages/cltk/corpus/coptic'...
Listing './lib/python3.5/site-packages/cltk/corpus/egyptian'...
Listing './lib/python3.5/site-packages/cltk/corpus/french'...
Listing './lib/python3.5/site-packages/cltk/corpus/greek'...
Listing './lib/python3.5/site-packages/cltk/corpus/greek/tlg'...
Listing './lib/python3.5/site-packages/cltk/corpus/hebrew'...
Listing './lib/python3.5/site-packages/cltk/corpus/hindi'...
Listing './lib/python3.5/site-packages/cltk/corpus/javanese'...
Listing './lib/python3.5/site-packages/cltk/corpus/kannada'...
Listing './lib/python3.5/site-packages/cltk/corpus/latin'...
Listing './lib/python3.5/site-packages/cltk/corpus/malayalam'...
Listing './lib/python3.5/site-packages/cltk/corpus/marathi'...
Listing './lib/python3.5/site-packages/cltk/corpus/multilingual'...
Listing './lib/python3.5/site-packages/cltk/corpus/old_church_slavonic'...
Listing './lib/python3.5/site-packages/cltk/corpus/old_english'...
Listing './lib/python3.5/site-packages/cltk/corpus/old_norse'...
Listing './lib/python3.5/site-packages/cltk/corpus/pali'...
Listing './lib/python3.5/site-packages/cltk/corpus/prakrit'...
Listing './lib/python3.5/site-packages/cltk/corpus/punjabi'...
Listing './lib/python3.5/site-packages/cltk/corpus/sanskrit'...
Listing './lib/python3.5/site-packages/cltk/corpus/sanskrit/itrans'...
Listing './lib/python3.5/site-packages/cltk/corpus/telugu'...
Listing './lib/python3.5/site-packages/cltk/corpus/tibetan'...
Listing './lib/python3.5/site-packages/cltk/corpus/utils'...
Listing './lib/python3.5/site-packages/cltk/ir'...
Listing './lib/python3.5/site-packages/cltk/lemmatize'...
Listing './lib/python3.5/site-packages/cltk/lemmatize/french'...
Listing './lib/python3.5/site-packages/cltk/lemmatize/greek'...
Listing './lib/python3.5/site-packages/cltk/lemmatize/latin'...
Listing './lib/python3.5/site-packages/cltk/phonology'...
Listing './lib/python3.5/site-packages/cltk/phonology/akkadian'...
Listing './lib/python3.5/site-packages/cltk/phonology/arabic'...
Listing './lib/python3.5/site-packages/cltk/phonology/greek'...
Listing './lib/python3.5/site-packages/cltk/phonology/latin'...
Listing './lib/python3.5/site-packages/cltk/prosody'...
Listing './lib/python3.5/site-packages/cltk/prosody/greek'...
Listing './lib/python3.5/site-packages/cltk/prosody/latin'...
Compiling './lib/python3.5/site-packages/cltk/prosody/latin/ScansionConstants.py'...
***   File "./lib/python3.5/site-packages/cltk/prosody/latin/ScansionConstants.py", line 72
    self.NOTE_MAP: dict = dict((("positionally", "Valid by positional stresses."),
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cltk/prosody/latin/Syllabifier.py'...
***   File "./lib/python3.5/site-packages/cltk/prosody/latin/Syllabifier.py", line 113
    syllables: list = []
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cltk/stem'...
Listing './lib/python3.5/site-packages/cltk/stem/akkadian'...
Listing './lib/python3.5/site-packages/cltk/stem/french'...
Listing './lib/python3.5/site-packages/cltk/stem/latin'...
Listing './lib/python3.5/site-packages/cltk/stem/sanskrit'...
Listing './lib/python3.5/site-packages/cltk/stop'...
Listing './lib/python3.5/site-packages/cltk/stop/arabic'...
Listing './lib/python3.5/site-packages/cltk/stop/french'...
Listing './lib/python3.5/site-packages/cltk/stop/greek'...
Listing './lib/python3.5/site-packages/cltk/stop/latin'...
Listing './lib/python3.5/site-packages/cltk/stop/marathi'...
Listing './lib/python3.5/site-packages/cltk/stop/middle_english'...
Listing './lib/python3.5/site-packages/cltk/stop/old_english'...
Listing './lib/python3.5/site-packages/cltk/stop/old_norse'...
Listing './lib/python3.5/site-packages/cltk/stop/punjabi'...
Listing './lib/python3.5/site-packages/cltk/stop/sanskrit'...
Listing './lib/python3.5/site-packages/cltk/tag'...
Listing './lib/python3.5/site-packages/cltk/text_reuse'...
Listing './lib/python3.5/site-packages/cltk/tokenize'...
Listing './lib/python3.5/site-packages/cltk/utils'...
Listing './lib/python3.5/site-packages/cltk/vector'...
Listing './lib/python3.5/site-packages/cltk-0.1.76.egg-info'...
Listing './lib/python3.5/site-packages/git'...
Listing './lib/python3.5/site-packages/git/index'...
Listing './lib/python3.5/site-packages/git/objects'...
Listing './lib/python3.5/site-packages/git/objects/submodule'...
Listing './lib/python3.5/site-packages/git/refs'...
Listing './lib/python3.5/site-packages/git/repo'...
Listing './lib/python3.5/site-packages/git/test'...
Listing './lib/python3.5/site-packages/git/test/fixtures'...
Listing './lib/python3.5/site-packages/git/test/lib'...
Listing './lib/python3.5/site-packages/git/test/performance'...
Listing './lib/python3.5/site-packages/gitdb'...
Listing './lib/python3.5/site-packages/gitdb/db'...
Listing './lib/python3.5/site-packages/gitdb/test'...
Listing './lib/python3.5/site-packages/gitdb/utils'...
Listing './lib/python3.5/site-packages/gitdb2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/nltk'...
Listing './lib/python3.5/site-packages/nltk/app'...
Listing './lib/python3.5/site-packages/nltk/ccg'...
Listing './lib/python3.5/site-packages/nltk/chat'...
Listing './lib/python3.5/site-packages/nltk/chunk'...
Listing './lib/python3.5/site-packages/nltk/classify'...
Listing './lib/python3.5/site-packages/nltk/cluster'...
Listing './lib/python3.5/site-packages/nltk/corpus'...
Listing './lib/python3.5/site-packages/nltk/corpus/reader'...
Listing './lib/python3.5/site-packages/nltk/draw'...
Listing './lib/python3.5/site-packages/nltk/inference'...
Listing './lib/python3.5/site-packages/nltk/metrics'...
Listing './lib/python3.5/site-packages/nltk/misc'...
Listing './lib/python3.5/site-packages/nltk/parse'...
Listing './lib/python3.5/site-packages/nltk/sem'...
Listing './lib/python3.5/site-packages/nltk/sentiment'...
Listing './lib/python3.5/site-packages/nltk/stem'...
Listing './lib/python3.5/site-packages/nltk/tag'...
Listing './lib/python3.5/site-packages/nltk/tbl'...
Listing './lib/python3.5/site-packages/nltk/test'...
Listing './lib/python3.5/site-packages/nltk/test/unit'...
Listing './lib/python3.5/site-packages/nltk/test/unit/translate'...
Listing './lib/python3.5/site-packages/nltk/tokenize'...
Listing './lib/python3.5/site-packages/nltk/translate'...
Listing './lib/python3.5/site-packages/nltk/twitter'...
Listing './lib/python3.5/site-packages/nltk-3.2.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycrfsuite'...
Listing './lib/python3.5/site-packages/python_crfsuite-0.9.5.dist-info'...
Listing './lib/python3.5/site-packages/pyuca'...
Listing './lib/python3.5/site-packages/pyuca-1.2.dist-info'...
Listing './lib/python3.5/site-packages/regex-2018.1.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/smmap'...
Listing './lib/python3.5/site-packages/smmap/test'...
Listing './lib/python3.5/site-packages/smmap2-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/whoosh'...
Listing './lib/python3.5/site-packages/whoosh/analysis'...
Listing './lib/python3.5/site-packages/whoosh/automata'...
Listing './lib/python3.5/site-packages/whoosh/codec'...
Listing './lib/python3.5/site-packages/whoosh/filedb'...
Listing './lib/python3.5/site-packages/whoosh/lang'...
Listing './lib/python3.5/site-packages/whoosh/lang/snowball'...
Listing './lib/python3.5/site-packages/whoosh/matching'...
Listing './lib/python3.5/site-packages/whoosh/qparser'...
Listing './lib/python3.5/site-packages/whoosh/query'...
Listing './lib/python3.5/site-packages/whoosh/support'...
Listing './lib/python3.5/site-packages/whoosh/util'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
